Fixed map height on mobile

--- a/Glocal/static/css/stylish-portfolio.css
+++ b/Glocal/static/css/stylish-portfolio.css
@@ -227,7 +227,7 @@ hr.small {
 
 @media(max-width:768px) {
     .map {
-        height: 75%;
+        height: 50%;
     }
 }
 
